[package]
name = "dime"
version = "0.1.0"
edition = "2024"

[dependencies]
pin-project-lite = { version = "0.2" }
tokio = { version = "1.47", default-features = false, features = ["sync"] }
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }

[features]
default = ["tokio"]
tokio = ["tokio/rt"]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread", "test-util", "time"] }
