[workspace]
members = [
    "./",
    "dime_core"
]
resolver = "3"

[package]
name = "dime"
version = "0.1.0"
edition = "2024"

[dependencies]
dime_core = { path = "dime_core" }
tokio = { version = "1.47", default-features = false, features = ["sync"] }
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }

[features]
default = []
tokio = ["tokio/rt"]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread", "test-util", "time"] }
